[gd_scene load_steps=6 format=3 uid="uid://cp226u7mqm2dm"]

[ext_resource type="Texture2D" uid="uid://dwv5cvl02m1co" path="res://assets/ui/panel_beige.png" id="1_m5ckn"]
[ext_resource type="FontFile" uid="uid://deoq1ioqoxk5k" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="2_0k6fu"]
[ext_resource type="Script" uid="uid://ckk8jdi0qe6q2" path="res://scenes/level_button/level_button.gd" id="2_c5ob8"]
[ext_resource type="LabelSettings" uid="uid://j8w2rvw4whqe" path="res://resources/white_subtitle_32px.tres" id="3_fe81u"]

[sub_resource type="LabelSettings" id="LabelSettings_c5ob8"]
font = ExtResource("2_0k6fu")
font_size = 48
font_color = Color(0.929715, 0.929715, 0.929715, 1)
shadow_size = 2
shadow_color = Color(0.0196078, 0.0431373, 0.168627, 0.639216)

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_m5ckn")
script = ExtResource("2_c5ob8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "3"
label_settings = SubResource("LabelSettings_c5ob8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScorelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "999"
label_settings = ExtResource("3_fe81u")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
